Strips from file with long filename broke auto-naming - animation can't be apply on it #39818

Closed
opened 2014-04-21 00:42:42 +02:00 by Michael Soluyanov · 6 comments

System Information
Ubuntu 14.04

Blender Version
Broken: blender 2.70 2014-04-15 hash 43b7dac

Short description of error
Strips with long name broke auto-naming. This is the reason that some animation can't be apply on it

Exact steps for others to reproduce the error

  1. Add in sequencer a file with long name. Name generated for it will be cut like this:
 ` Some_artist-some_music_from_some_album_licensed_as_cc-n `
  1. Cut strip several times: all new strips will have same name:
 ` Some_artist-some_music_from_some_album_licensed_as_cc.0 `
  1. Now you can't add an different animations on this strips (until you set different name manually), because they have one name.
**System Information** Ubuntu 14.04 **Blender Version** Broken: blender 2.70 2014-04-15 hash 43b7dac **Short description of error** Strips with long name broke auto-naming. This is the reason that some animation can't be apply on it **Exact steps for others to reproduce the error** 1. Add in sequencer a file with long name. Name generated for it will be cut like this: ``` ` Some_artist-some_music_from_some_album_licensed_as_cc-n ` ``` 2. Cut strip several times: all new strips will have same name: ``` ` Some_artist-some_music_from_some_album_licensed_as_cc.0 ` ``` 3. Now you can't add an different animations on this strips (until you set different name manually), because they have one name.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz

This issue was referenced by blender/blender-addons-contrib@6ee8670fca

This issue was referenced by blender/blender-addons-contrib@6ee8670fca946d146332e80ceff29e459cd91ed5

This issue was referenced by 6ee8670fca

This issue was referenced by 6ee8670fca946d146332e80ceff29e459cd91ed5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 6ee8670fca.

Closed by commit 6ee8670fca.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39818
No description provided.