Fix T39818: Strips from file with long filename broke auto-naming - animation can't be apply on it.